gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-dev-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: false
      hosts:
        - nginx.sklinux.com
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        serverCertificate: /etc/istio/ingressgateway-certs/nginx.sklinux.com.pem
        privateKey: /etc/istio/ingressgateway-certs/nginx.sklinux.com.key
      hosts:
        - nginx.sklinux.com
