dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dev
spec:
  host: nginx-dev
  subsets:
    - name: main
      labels:
        version: v1
