vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-dev-vs
spec:
  hosts:
    - nginx.sklinux.com
  gateways:
    - nginx-dev-gateway
  http:
    - route:
        - destination:
            host: nginx-dev
            port:
              number: 80
            subset: main
